specify monitor for each workspace

--- a/wms/hyprland/hypr/monitors.conf
+++ b/wms/hyprland/hypr/monitors.conf
@@ -5,3 +5,14 @@
 # See https://wiki.hyprland.org/Configuring/Monitors/
 
 monitor=,preferred,auto,auto
+
+workspace=DP-2,1
+workspace=DP-2,3
+workspace=DP-2,5
+workspace=DP-2,7
+workspace=DP-2,9
+workspace=HDMI-A-1,2
+workspace=HDMI-A-1,4
+workspace=HDMI-A-1,6
+workspace=HDMI-A-1,8
+workspace=HDMI-A-1,0
