add and use waybar

--- a/wms/hyprland/hypr/launches.conf
+++ b/wms/hyprland/hypr/launches.conf
@@ -4,5 +4,9 @@
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
 # Execute your favorite apps at launch
 
-exec-once = eww daemon
-exec-once = eww -c ~/.config/eww/topbar open bar
+
+# System panels
+# exec-once = eww daemon
+# exec-once = eww -c ~/.config/eww/topbar open bar
+exec-once = killall -9 waybar
+exec-once = waybar
