--- a/wms/hyprland/hypr/hyprpaper.conf
+++ b/wms/hyprland/hypr/hyprpaper.conf
@@ -1,5 +1,5 @@
-preload = ~/.config/home-manager/wallpapers/1.jpg
-wallpaper = DP-2,~/.config/home-manager/wallpapers/1.jpg
-wallpaper = HDMI-A-1,~/.config/home-manager/wallpapers/1.jpg
+preload = ~/.config/home-manager/wallpapers/1-dark.png
+wallpaper = DP-2,~/.config/home-manager/wallpapers/1-dark.png
+wallpaper = HDMI-A-1,~/.config/home-manager/wallpapers/1-dark.png
 
 ipc = off
