--- a/wms/hyprland/hypr/keybindings.conf
+++ b/wms/hyprland/hypr/keybindings.conf
@@ -19,6 +19,7 @@ bind = $mainMod, V, togglefloating,
 bind = $mainMod, D, exec, $menu
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, J, togglesplit, # dwindle
+bind = $mainMod, ESCAPE, exec, ~/.config/home-manager/scripts/wofi-power
 
 # Move focus with mainMod + arrow keys
 bind = $mainMod, left, movefocus, l
