--- a/wms/hyprland/hypr/monitors.conf
+++ b/wms/hyprland/hypr/monitors.conf
@@ -4,8 +4,10 @@
 
 # See https://wiki.hyprland.org/Configuring/Monitors/
 
-monitor=,preferred,auto,auto
+monitor=,highres,auto,1
+monitor = DP-1, 2560x1080@144, 0x0, 1, bitdepth, 10
 
+# My PC
 workspace=DP-2,1
 workspace=DP-2,3
 workspace=DP-2,5
@@ -16,3 +18,12 @@ workspace=HDMI-A-1,4
 workspace=HDMI-A-1,6
 workspace=HDMI-A-1,8
 workspace=HDMI-A-1,0
+
+# My Laptop
+monitor = eDP-1, 1920x1080@60, 1920x0, 1
+monitor = HDMI-A-1, 1920x1080@60, 0x0, 1
+workspace=eDP-1,1
+workspace=eDP-1,3
+workspace=eDP-1,5
+workspace=eDP-1,7
+workspace=eDP-1,9
