--- a/wms/hyprland/hypr/hyprpaper.conf
+++ b/wms/hyprland/hypr/hyprpaper.conf
@@ -1,4 +1,5 @@
 preload = ~/.config/home-manager/wallpapers/1-dark.png
+wallpaper = eDP-1,~/.config/home-manager/wallpapers/1-dark.png
 wallpaper = DP-2,~/.config/home-manager/wallpapers/1-dark.png
 wallpaper = HDMI-A-1,~/.config/home-manager/wallpapers/1-dark.png
 
