--- a/wms/hyprland/hypr/keybindings.conf
+++ b/wms/hyprland/hypr/keybindings.conf
@@ -18,14 +18,24 @@ bind = $mainMod, E, exec, $fileManager
 bind = $mainMod, V, togglefloating,
 bind = $mainMod, D, exec, $menu
 bind = $mainMod, P, pseudo, # dwindle
+bind = $mainMod, F, fullscreen, # toggle the window on focus to fullscreen
 bind = $mainMod, J, togglesplit, # dwindle
 bind = $mainMod, ESCAPE, exec, ~/.config/home-manager/scripts/wofi-power
+bind = $CONTROL, ESCAPE, exec, pkill -9 waybar || waybar # toggle waybar
+bind = $mainMod, tab, exec, hyprctl dispatch focuscurrentorlast
 
 # Move focus with mainMod + arrow keys
 bind = $mainMod, left, movefocus, l
 bind = $mainMod, right, movefocus, r
 bind = $mainMod, up, movefocus, u
 bind = $mainMod, down, movefocus, d
+
+# Move focus with mainMod + vim keys
+bind = $mainMod, h, movefocus, l
+bind = $mainMod, l, movefocus, r
+bind = $mainMod, j, movefocus, u
+bind = $mainMod, k, movefocus, d
+bind = ALT, Tab, movefocus, d
 
 # Switch workspaces with mainMod + [0-9]
 bind = $mainMod, 1, workspace, 1
